Hey, here is the javascript folder

--- a/java-script/Contact-Us.html
+++ b/java-script/Contact-Us.html
@@ -39,7 +39,7 @@
 
         var tdHome = document.createElement("td")     
         var aHome = document.createElement("a")
-        aHome.href = "home.html"
+        aHome.href = "index.html"
         aHome.innerText = "Home"
         aHome.class = "gbmTopMenuTableLink"
         aHome.style.color = "white"
