--- a/Gbm_Website_Jquery/Checkout.html
+++ b/Gbm_Website_Jquery/Checkout.html
@@ -9,120 +9,7 @@
 </head>
 
 <style>
-    /* Payment_Gateaway */
-    /* ------------ */
-    #Gbm_Payment_form__package {
-        width: 60%;
-        float: left;
-    }
-
-    #Gbm_YourOrder_div {
-        position: relative;
-        left: 5%;
-        width: 40%;
-        float: right;
-    }
-
-    #Gbm_YourOrder_tbl__div {
-        border-collapse: collapse;
-        width: 298px;
-        height: 100px;
-        text-align: center;
-    }
-
-    #Gbm_YourOrder_tr__tbl {
-        background-color: #dddddd;
-        color: white;
-    }
-
-    #Gbm_YourOrder_information_div {
-        border-radius: 100%;
-    }
-
-    #Gbm_YourOrder_information_div2 {
-        background-color: #dddddd;
-        padding: 8px;
-        width: 283px;
-    }
-
-    Gbm_YourOrder_Submit_div {
-        position: relative;
-        top: 102%;
-    }
-
-    #Gbm_yourOrder_button {
-        width: 298px;
-        height: 36px;
-        background-color: #666666;
-        color: white;
-        cursor: pointer;
-    }
-
-    /* -------------- */
-    #Gbm_Payment_form__div {
-        width: 50%;
-        height: 80%;
-        position: relative;
-        left: 10%;
-        top: 10%;
-    }
-
-    #Gbm_Payment_title__form {
-        text-align: center;
-        width: 100%;
-        left: 10%;
-    }
-
-    #Gbm_Payment_lname_div {
-        width: 45%;
-        position: relative;
-        float: left;
-        margin-right: 5%;
-    }
-
-    #Gbm_Payment_fname_div {
-        width: 45%;
-        position: relative;
-        float: right;
-        margin-left: 5%;
-    }
-
-    #Gbm_txt_address__div {
-        width: 100%;
-        height: 100%;
-    }
-
-    #Gbm_Payment_Country__div {
-        width: 45%;
-        position: relative;
-        float: left;
-        margin-right: 5%;
-    }
-
-    #Gbm_Payment_zip__div {
-        width: 45%;
-        position: relative;
-        float: right;
-        margin-left: 5%;
-    }
-
-    #Gbm_Payment_Email__div {
-        width: 45%;
-        position: relative;
-        float: left;
-        margin-right: 5%;
-    }
-
-    #Gbm_Payment_Phone__div {
-        width: 45%;
-        position: relative;
-        float: right;
-        margin-left: 5%;
-    }
-
-    .Gbm_payment_input__div {
-        width: 100%;
-    }
+    
 </style>
 
 <body>
@@ -136,11 +23,12 @@
                     <td><a href="Contact-Us.html" class="Gbm_top_menu__table_link">Contact Us</a></td>
                 </tr>
             </tbody>
+        </table>
     </div>
     <div id="sidebar" style="background-color: #4682B4"></div>
     <div id="Gbm_master__div_container">
         <div id="Gbm_Payment_form__package">
-            <form id="Gbm_Payment_form__div">
+            <div id="Gbm_Payment_form__div">
 
                 <h2 id="Gbm_Payment_title__form">Payment Gateaway</h2>
 
@@ -160,7 +48,7 @@
                 <div id="Gbm_Payment_City_div">
                     <label id="Gbm_Payment_Lbl_City__div" for="Gbm_city ">City</label>
                     <input id="Gbm_Payment_txt_City__div" type="text" class="Gbm_payment_input__div"
-                        style="width:100%" />
+                           style="width:100%" />
                 </div>
                 <div id="Gbm_Payment_Country__div">
                     <label id="Gbm_lbl_country" for="Gbm_content_fname">Country</label><br />
@@ -178,7 +66,7 @@
                     <label id="Gbm_lbl__phone" for="Gbm__phone">Phone</label><br />
                     <input id="Gbm_txt__fname" type="text" class="Gbm_payment_input__div" />
                 </div>
-            </form>
+            </div>
         </div>
         <div id="Gbm_YourOrder_div">
             <h2>Your Order</h2>
@@ -209,7 +97,7 @@
             <div id="Gbm_YourOrder_information_div">
 
                 <input type="radio" id="Gbm_YourOrder_Direct_bank" name="Direct Bank Transfert"
-                    value="Direct Bank Transfert">
+                       value="Direct Bank Transfert">
                 <label for="Gbm_YourOrder_lbl">Direct Bank Transfert</label><br>
                 <input type="radio" id="Gbm_YourOrder_Cheque_bank__div" name="Cheque Payment" value="Cheque Payment">
                 <label for="Gbm_lbl_Cheque_Payment">Cheque Payment</label><br>
